学生系统登陆与首次密码修改

--- a/学生科技文体竞赛系统/竞赛学生系统/Views/Login/Index.cshtml
+++ b/学生科技文体竞赛系统/竞赛学生系统/Views/Login/Index.cshtml
@@ -17,7 +17,7 @@
     <link href="~/Content/css/styles.css" rel="stylesheet" />
     <script src="~/Scripts/jquery-2.1.1.min.js"></script>
 
-    <title>竞赛赛系统登陆</title>
+    <title>学生竞赛系统登陆</title>
 
     <link rel="stylesheet" type="text/css" href="~/Content/css/styles.css">
     <style type="text/css">
