--- a/学生科技文体竞赛系统/竞赛老师系统/Areas/Examination/Views/Index/Index.cshtml
+++ b/学生科技文体竞赛系统/竞赛老师系统/Areas/Examination/Views/Index/Index.cshtml
@@ -4,8 +4,8 @@
     Layout = "~/Views/Shared/_Layout.cshtml";
 }
 
-//模态框
-<div class="modal fade" id="queryInfo2" tabindex="-1" role="dialog"
+
+<div class="modal fade" id="queryInfo1" tabindex="-1" role="dialog"
      aria-labelledby="myModalLabel" aria-hidden="true" data-backdrop="static">
     <div class="modal-dialog modal-lg">
         <div class="modal-content">
@@ -14,7 +14,7 @@
                         aria-hidden="true">
                     &times;
                 </button>
-                <h4 class="modal-title" id="myModalTitle">修改基本信息</h4>
+                <h2 class="modal-title" id="myModalTitle">详情</h2>
             </div>
             <div class="modal-body">
                 <div class="input-group" id="model1">
@@ -22,36 +22,85 @@
                     <input type="text" class="form-control my_input"
                            id="input1" data-toggle="popover"
                            data-content="不能为空"
-                           data-placement="bottom">
+                           data-placement="bottom" readonly="readonly">
                 </div>
                 <br />
                 <div class="input-group" id="model2">
-                    <span class="input-group-addon">&nbsp;&nbsp;籍&nbsp;&nbsp;&nbsp;&nbsp;贯&nbsp;&nbsp;</span>
+                    <span class="input-group-addon">&nbsp;&nbsp;班&nbsp;&nbsp;&nbsp;&nbsp;级&nbsp;&nbsp;</span>
                     <input type="text" class="form-control"
                            id="input2" data-toggle="popover"
                            data-content="不能为空"
-                           data-placement="bottom">
+                           data-placement="bottom"readonly="readonly">
                 </div>
                 <br />
                 <div class="input-group" id="model3">
-                    <span class="input-group-addon">手机号码</span>
+                    <span class="input-group-addon">&nbsp;&nbsp;学&nbsp;&nbsp;&nbsp;&nbsp;号&nbsp;&nbsp;</span>
                     <input type="text" class="form-control"
                            id="input3" data-toggle="popover"
                            data-content="不能为空"
-                           data-placement="bottom">
+                           data-placement="bottom"readonly="readonly">
                 </div>
-                <div class="input-group" id="model3" style=" display:none">
+                <br />
+                <div class="input-group" id="model3">
+                    <span class="input-group-addon">学年成绩</span>
                     <input type="text" class="form-control"
-                           id="input4">
+                           id="input4" data-toggle="popover"
+                           data-content="不能为空"
+                           data-placement="bottom"readonly="readonly">
                 </div>
                 <br />
 
                 <div class="input-group" id="model3">
-                    <span class="input-group-addon">办公地址</span>
+                    <span class="input-group-addon">&nbsp;&nbsp;电&nbsp;&nbsp;&nbsp;&nbsp;话&nbsp;&nbsp;</span>
                     <input type="text" class="form-control"
-                           id="input3" data-toggle="popover"
+                           id="input5" data-toggle="popover"
                            data-content="不能为空"
-                           data-placement="bottom">
+                           data-placement="bottom"readonly="readonly">
+                </div>
+                <br />
+
+                <div class="input-group" id="model3">
+                    <span class="input-group-addon">比赛项目</span>
+                    <input type="text" class="form-control"
+                           id="input6" data-toggle="popover"
+                           data-content="不能为空"
+                           data-placement="bottom"readonly="readonly">
+                </div>
+                <br />
+
+                <div class="input-group" id="model3">
+                    <span class="input-group-addon">&nbsp;&nbsp;类&nbsp;&nbsp;&nbsp;&nbsp;别&nbsp;&nbsp;</span>
+                    <input type="text" class="form-control"
+                           id="input7" data-toggle="popover"
+                           data-content="不能为空"
+                           data-placement="bottom"readonly="readonly">
+                </div>
+                <br />
+
+                <div class="input-group" id="model3">
+                    <span class="input-group-addon">&nbsp;&nbsp;邮&nbsp;&nbsp;&nbsp;&nbsp;箱&nbsp;&nbsp;</span>
+                    <input type="text" class="form-control"
+                           id="input8" data-toggle="popover"
+                           data-content="不能为空"
+                           data-placement="bottom"readonly="readonly">
+                </div>
+                <br />
+
+                <div class="input-group" id="model3">
+                    <span class="input-group-addon">报名时间</span>
+                    <input type="text" class="form-control"
+                           id="input9" data-toggle="popover"
+                           data-content="不能为空"
+                           data-placement="bottom"readonly="readonly">
+                </div>
+                <br />
+
+                <div class="input-group" id="model3">
+                    <span class="input-group-addon">参赛队员</span>
+                    <input type="text" class="form-control"
+                           id="input10" data-toggle="popover"
+                           data-content="不能为空"
+                           data-placement="bottom"readonly="readonly">
                 </div>
                 <div class="input-group" id="model3" style=" display:none">
                     <input type="text" class="form-control"
@@ -60,7 +109,7 @@
 
                 <div class="modal-footer">
 
-                    <button type="submit" class="btn btn-success" id="btn_Info" value="1">提交</button>
+                   
                     <button type="button" class="btn btn-default" id="myclose"
                             data-dismiss="modal">
                         关闭
@@ -250,7 +299,7 @@
                 });
             };
             operation = function (value, row, index) {
-                return '<input type="button" name="submit" id="bt_Detailed" class="btn btn-primary"  value="详细"style="margin-top:0">' +
+                return '<input type="button" name="submit" id="bt_Detailed" class="btn btn-primary" onclick="edit(' + value + ')"  value="详细"style="margin-top:0">' +
                     '<input type="button" name="submit" id="bt_Via" class="btn btn-success" onclick="pass(' + value + ')" value="通过"style="margin-top:0">' +
                     '<input type="button" name="submit" id="bt_Retrea" class="b btn btn-inverse" value="退回"style="margin-top:0">';
             }
@@ -286,7 +335,7 @@
             });
 
             pass = function (id) {
-                alert(id)
+                alert(id);
                 $.ajax({
                     url: "/Examination/Index/Via",
                     type: "post",
@@ -343,21 +392,28 @@
             return oTableInit;
 
 
-            $("#bt_Detailed").click(function () {
-
-                for (var item = 1; item <= 3; item++) {
-                    $("#input" + item).val("");
-                    $("#model" + item).removeClass("has-warning");
-                    $("#model" + item).removeClass("has-success");
-                }
-                $('#queryInfo2').modal('show');
-                $("#input1").val($("#name").val());
-                $("#input2").val($("#place").val());
-                $("#input3").val($("#tel").val());
-                $("#input4").val($(".img-responsive")[0].src);
-                $("#photo").attr("src", $(".img-responsive")[0].src);
-            });
         };
+
+        edit = function (id) {
+           
+            $.ajax({
+                url: "/Examination/Index/NewEdit ",
+                type: "post",
+                dataType: "json",
+                contentType: "application/json",
+                data: JSON.stringify({
+                    "id": id,
+                }),
+                success: function (data) {
+                    $("#queryInfo1").modal('show');
+                    var i = 0;
+                    for (var r in data) {
+                        $("#input" + i).val(data[r]);
+                        i++;
+                    }
+                }
+            });
+        }
     });
 </script>
 
