--- a/学生科技文体竞赛系统/竞赛老师系统/Views/Shared/_Layout.cshtml
+++ b/学生科技文体竞赛系统/竞赛老师系统/Views/Shared/_Layout.cshtml
@@ -99,7 +99,7 @@
                             <a href="/policeManager/TB_pcUser/Index"><i class="fa fa-edit"></i> <span class="nav-label">发布</span></a>
                         </li>
                         <li>
-                            <a href="#">
+                            <a href="/Examination/Index/Index">
                                 <i class="fa fa-desktop"></i> <span class="nav-label">审核报名</span><span class="fa arrow"></span><span class="label label-warning pull-right">0</span>
                             </a>
                         </li>
@@ -108,6 +108,12 @@
                         </li>
                         <li>
                             <a href="#"><i class="fa fa-desktop"></i> <span class="nav-label">团队管理</span><span class="fa arrow"></span></a>
+                            <ul class="nav nav-second-level collapse">
+                                <li>
+                                    <a class="J_menuItem" href="/FeedBackMsg/Msg/Index">收信箱</a>
+                                </li>
+
+                            </ul>
                         </li>
                         <li class="line dk"></li>
 
