--- a/学生科技文体竞赛系统/竞赛学生系统/Views/Shared/_Layout.cshtml
+++ b/学生科技文体竞赛系统/竞赛学生系统/Views/Shared/_Layout.cshtml
@@ -68,10 +68,10 @@
                             <span class="ng-scope">个人</span>
                         </li>
                         <li>
-                            <a href="/policeManager/TB_pcUser/Index"><i class="fa fa-edit"></i> <span class="nav-label">主页</span></a>
+                            <a href="/Home/Index/Index"><i class="fa fa-edit"></i> <span class="nav-label">主页</span></a>
                         </li>
                         <li>
-                            <a class="J_menuItem" href="/InfoAduit/InfoAudit/Index">
+                            <a class="J_menuItem" href="/Information/Index/Index">
                                 <i class="fa fa-home"></i>
                                 <span class="nav-label">消息</span>
                             </a>
