--- a/学生科技文体竞赛系统/竞赛老师系统/Views/Shared/_Layout.cshtml
+++ b/学生科技文体竞赛系统/竞赛老师系统/Views/Shared/_Layout.cshtml
@@ -68,7 +68,8 @@
                             <span class="ng-scope">个人</span>
                         </li>
                         <li>
-                            <a href="/policeManager/TB_pcUser/Index"><i class="fa fa-edit"></i> <span class="nav-label">主页</span></a>
+                            <a href="/Home/home/Index"><i class="fa fa-edit"></i> <span class="nav-label">主页</span></a>
+                           
                         </li>
                         <li>
                             <a class="J_menuItem" href="/InfoAduit/InfoAudit/Index">
@@ -84,7 +85,7 @@
                             </a>
                             <ul class="nav nav-second-level collapse">
                                 <li>
-                                    <a class="J_menuItem" href="/UserInfoManager/View_UserInfo/Index">修改个人信息</a>
+                                    <a class="J_menuItem" href="/TeacherInfo/TeacherInfo/Index">修改个人信息</a>                                
                                 </li>
                                 <li>
                                     <a class="J_menuItem" href="/CarInfoManager/View_CarInfo/Index">修改密码</a>
