整合学生老师修改界面

--- a/学生科技文体竞赛系统/竞赛学生系统/Areas/Home/Views/Index/Index.cshtml
+++ b/学生科技文体竞赛系统/竞赛学生系统/Areas/Home/Views/Index/Index.cshtml
@@ -102,7 +102,7 @@
                             <a href="#">个人信息</a>
                             <ul>
                                 <li><a href="blog.html">修改信息</a></li>
-                                <li><a href="blogsingle.html">修改密码</a></li>
+                                <li><a href="/Login/Register">修改密码</a></li>
                             </ul>
                         </li>
                     </ul>
