--- a/学生科技文体竞赛系统/竞赛学生系统/Views/Shared/_Layout.cshtml
+++ b/学生科技文体竞赛系统/竞赛学生系统/Views/Shared/_Layout.cshtml
@@ -87,7 +87,7 @@
                                     <a class="J_menuItem" href="/UserInfoManager/View_UserInfo/Index">修改个人信息</a>
                                 </li>
                                 <li>
-                                    <a class="J_menuItem" href="/CarInfoManager/View_CarInfo/Index">修改密码</a>
+                                    <a class="J_menuItem" href="/Login/Register">修改密码</a>
                                 </li>
                             </ul>
                         </li>
