--- a/学生科技文体竞赛系统/竞赛老师系统/Views/Shared/_Layout.cshtml
+++ b/学生科技文体竞赛系统/竞赛老师系统/Views/Shared/_Layout.cshtml
@@ -88,7 +88,7 @@
                                     <a class="J_menuItem" href="/TeacherInfo/TeacherInfo/Index">修改个人信息</a>                                
                                 </li>
                                 <li>
-                                    <a class="J_menuItem" href="/CarInfoManager/View_CarInfo/Index">修改密码</a>
+                                    <a class="J_menuItem" href="/Login/Register">修改密码</a>
                                 </li>
                             </ul>
                         </li>
