修改注册登录按钮

--- a/学生科技文体竞赛系统/竞赛学生系统/Areas/Home/Views/Index/Index.cshtml
+++ b/学生科技文体竞赛系统/竞赛学生系统/Areas/Home/Views/Index/Index.cshtml
@@ -74,13 +74,11 @@
             
             <!--login start-->
             <section id="loginorregist">
-                <span>欢迎!@Session["username"]</span>
-                <a href="#" class="btn-small style-color">
-                    <span>注册</span>
+               
+                <a href="/Login/Index" class="btn-small style-color">
+                    <span>@Session["username"]</span>
                 </a>
-                <a href="#" class="btn-small style-color">
-                    <span>登录</span>
-                </a>
+                
 
             </section><!-- login end -->
             <!-- main navigation container start -->
